--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -7,23 +7,24 @@
     <script src="/js/fadeAnimations.js" defer></script>
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/triggerComment.js" defer></script>
-    <script src="/js/sinceCreated.js" defer></script>
   </head>
-  <body id="scrollablePage">
+
+  <body>
     <header>
-      <nav class="navbar">
-        <ul class="flex justify-between w-full">
-          <li class="flex items-center">
+      <nav>
+        <ul>
+          <li>
             <a id="backButton" th:href="@{|index#collection-${collection.id}|}">
               <span>&#8592;</span>
             </a>
           </li>
-          <li class="flex items-center">
+          <li>
             <div th:if="${collection.isOwner != null && collection.isOwner}">
               <a
-              class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
-              id="redirectUpdateCollection"
-              th:href="@{/update-collection/{id}(id=${collection.id})}" >
+                class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
+                id="redirectUpdateCollection"
+                th:href="@{/update-collection/{id}(id=${collection.id})}"
+              >
                 <span class="text-lg">&#9776;</span>
               </a>
             </div>
@@ -31,15 +32,17 @@
         </ul>
       </nav>
     </header>
-    <main th:id="'collection-' + ${collection.id}" class="">
-      <div class="h-auto w-full bg-slate-100">
-        <div class="collectionNavbar shadow-sm">
-          <div class="flex justify-between items-center w-full">
-            <ul class="flex justify-start items-center w-full">
+
+    <!-- COLLECTION CONTENT -->
+    <main th:id="'collection-' + ${collection.id}">
+      <div class="container">
+        <div class="box">
+          <nav>
+            <ul>
               <li class="pr-2">
                 <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
                   <img
-                    class="h-7 w-7 rounded-full bg-white"
+                    class="round-image"
                     th:src="${userProfile?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
                     alt="Profile Picture"
                   />
@@ -55,57 +58,89 @@
                 </a>
               </li>
             </ul>
-          </div>
-        </div>
-        <!-- COLLECTION CONTENT -->
-        <div class="flex flex-col justify-center items-center">
+          </nav>
           <!-- COLLECTION PICTURE -->
-          <a>
-            <img
-              style="aspect-ratio: 1 / 1; width: 100%; background-color: white;"
-              id="previewImage"
-              th:src="${collection != null && collection.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
-              alt="Profile Picture"
-            />
-          </a>
-          <div class="w-full px-2 border-2 bd-slate-100 bg-slate-50">
-            <div class="flex flex-row justify-between w-full h-auto py-1 text-sm">
-              <ul class="flex flex-row justify-start items-center pr-2">
-                <li class="flex flex-row justify-start items-center pr-2">
-                  <div class="flex justify-start items-center">
-                    <form th:if="${collection?.id != null}" th:action="@{/collections/{id}/like(id=${collection.id})}" method="post">
-                      <input type="hidden" name="collectionId" th:value="${collection.id}" />
-                      <input type="hidden" name="userId" th:value="${user.id}" />
+          <img
+            class="square"
+            id="previewImage"
+            th:src="${collection != null && collection.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
+            alt="Profile Picture"
+          />
 
-                      <button type="submit" class="likeButton" th:if="${collection.user.id != user.id}">
-                        <span class="pr-2 font-medium" th:if="${collection.isLiked}">&#9829;</span>
-                        <span class="pr-2 font-medium" th:if="${!collection.isLiked}">&#9825;</span>
+          <div class="caption-container">
+            <div class="like-comment-container">
+              <ul>
+                <li>
+                  <div class="element">
+                    <form
+                      th:if="${collection?.id != null}"
+                      th:action="@{/collections/{id}/like(id=${collection.id})}"
+                      method="post"
+                    >
+                      <input
+                        type="hidden"
+                        name="collectionId"
+                        th:value="${collection.id}"
+                      />
+                      <input
+                        type="hidden"
+                        name="userId"
+                        th:value="${user.id}"
+                      />
+
+                      <button
+                        type="submit"
+                        class="likeButton"
+                        th:if="${collection.user.id != user.id}"
+                      >
+                        <span
+                          class="pr-2 font-medium"
+                          th:if="${collection.isLiked}"
+                        >
+                          &#9829;
+                        </span>
+                        <span
+                          class="pr-2 font-medium"
+                          th:if="${!collection.isLiked}"
+                        >
+                          &#9825;
+                        </span>
                       </button>
-                      <button type="button" class="likeButton" th:if="${collection.user.id == user.id}" disabled>
+                      <button
+                        type="button"
+                        class="likeButton"
+                        th:if="${collection.user.id == user.id}"
+                        disabled
+                      >
                         <span class="pr-2 font-medium">&#9829;</span>
                       </button>
                     </form>
                   </div>
-                  <div class="flex justify-start items-center">
+                  <div class="element">
                     <p class="font-thin" th:text="${collection.likeCount}"></p>
                   </div>
                 </li>
-                <li class="flex flex-row justify-start items-center pr-2">
-                  <a th:href="@{/collection/{id}/comments(id=${collection.id})}">
+                <li>
+                  <a
+                    th:href="@{/collection/{id}/comments(id=${collection.id})}"
+                  >
                     <span class="pr-2 font-medium">comment</span>
                   </a>
-                  <span class="font-thin" th:text="${collection.commentCount}"></span>
+                  <span
+                    class="font-thin"
+                    th:text="${collection.commentCount}"
+                  ></span>
                 </li>
               </ul>
             </div>
-            <div class="w-full h-auto flex justify-start items-center text-sm">
+            <div class="caption">
               <!-- CAPTION -->
               <p
                 id="toggle_truncate"
                 class="truncate-multiline leading-[1rem]"
                 onclick="toggleTruncate(this)"
               >
-              <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
+                <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
                   <span
                     class="font-semibold"
                     th:if="${userProfile?.username != null}"
@@ -118,32 +153,37 @@
                 ></span>
               </p>
             </div>
-            <div class="w-full flex justify-between items-center py-1">
+            <div class="small-date">
               <!-- MONTH YEAR -->
-              <div class="w-full flex flex-col justify-center items-start pt-1">
-                <span
-                  style="font-size: 9px"
-                  class="font-extralight"
-                  th:if="${collection?.updatedAt != null}"
-                  th:text="${#dates.format(collection?.updatedAt, 'MMMM-YYYY')}"
-                ></span>
-              </div>
+              <span
+                style="font-size: 9px"
+                class="font-extralight"
+                th:if="${collection?.updatedAt != null}"
+                th:text="${#dates.format(collection?.updatedAt, 'MMMM-YYYY')}"
+              ></span>
             </div>
           </div>
-        </div>
-        <div id="itemGrid"
-          class="flex-grow pb-6 h-60 w-full bg-slate-100 overflow-y-auto"
-        >
-          <div class="grid bg-white">
-            <div th:each="row : ${partitionedItems}" class="grid grid-cols-3 bg-white">
-              <div th:each="item : ${row}" class="flex flex-col items-center bg-white">
-                <a th:href="@{/item/{id}(id=${item.id})}">
-                  <img
-                    th:src="${#strings.defaultString(item?.getImageUrl(), '/images/item_image.png')}"
-                    alt="Item Image"
-                    class="aspect-square w-full h-auto object-cover"
-                  />
-                </a>
+          <div
+            id="itemGrid"
+            class="flex-grow h-auto pb-6 w-full overflow-y-auto bg-slate-50"
+          >
+            <div class="grid bg-slate-50">
+              <div
+                th:each="row : ${partitionedItems}"
+                class="grid grid-cols-3 bg-slate-50"
+              >
+                <div
+                  th:each="item : ${row}"
+                  class="flex flex-col items-center bg-slate-50"
+                >
+                  <a th:href="@{/item/{id}(id=${item.id})}">
+                    <img
+                      th:src="${#strings.defaultString(item?.getImageUrl(), '/images/item_image.png')}"
+                      alt="Item Image"
+                      class="aspect-square w-full h-auto object-cover"
+                    />
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -151,65 +191,70 @@
       </div>
     </main>
     <footer>
-      <div class="footer">
-
-        <div id="footerNavContent" class="footerNav w-full">
-          <div th:if="${collection.isOwner != null && collection.isOwner}" class="w-full">
-            <!-- Footer for owner -->
-            <ul class="flex justify-between items-center w-full" id="footerNavOwner">
-              <li>
-                <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
-                  <a class="text-2xl font-bold" href="/index">&#8962;</a>
-                </div>
-              </li>
-              <li>
-                <div class="h-4 w-4 flex items-center justify-center">
-                  <a class="text-2xl font-bold" href="/popular">
-                    &#10066;
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="h-4 w-4 flex items-center justify-center">
-                  <a class="text-2xl font-bold" th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}">
-                    &#43;
-                  </a>
-                </div>
-              </li>
-              <li>
-                <a href="/profile">
-                  <img
-                    class="h-7 w-7 rounded-full bg-white"
-                    th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
-                    alt="Profile Picture"
-                  />
+      <div
+      th:if="${collection != null && collection.isOwner != null && collection.isOwner}"
+      >
+      <nav>
+          <!-- Footer for owner -->
+          <ul id="footerNavOwner">
+            <li>
+              <div
+                id="homeButton"
+                class="icon"
+              >
+                <a class="text-2xl font-bold" href="/index">&#8962;</a>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <a
+                  class="text-2xl font-bold"
+                  th:href="@{/create-item/{collectionId}(collectionId=${collection?.id})}"
+                >
+                  &#43;
                 </a>
-              </li>
-            </ul>
-          </div>
-          
-          <div th:if="${collection.isOwner != null && !collection.isOwner}" class="w-full">
-            <!-- Footer for non-owner -->
-            <ul class="flex justify-between items-center w-full" id="footerNavUser">
-              <li>
-                <div class="h-4 w-4 flex items-center justify-center">
-                  <a class="text-2xl font-bold" href="/index">
-                    &#8962;
-                  </a>
-                </div>
-              </li>
-              <li>
-                <a href="/profile">
-                  <img
-                    class="h-7 w-7 rounded-full bg-white"
-                    th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
-                    alt="Profile Picture"
-                  />
-                </a>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+            <li>
+              <a href="/profile">
+                <img
+                  class="round-image"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </li>
+          </ul>
+          </nav>
         </div>
+
+        <div
+          th:if="${collection.isOwner != null && !collection.isOwner}"
+        >
+        <nav>
+          <!-- Footer for non-owner -->
+          <ul id="footerNavUser">
+            <li>
+              <div class="icon">
+                <a class="text-2xl font-bold" href="/index">&#8962;</a>
+              </div>
+            </li>
+            <li>
+              <a href="/profile">
+                <img
+                  class="round-image"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </body>
