--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,13 +14,13 @@
 
   <body>
     <header>
-      <nav class="navbar">
-        <ul class="flex justify-between items-center w-full">
+      <nav>
+        <ul>
           <li>
             <div id="logoHomeButton">
               <a href="/index">
                 <img
-                  class="h-5"
+                  class="logo"
                   src="/images/Shelved_Logo_White.png"
                   alt="Shelved Logo"
                 />
@@ -30,7 +30,7 @@
           <li>
             <a href="/profile">
               <img
-                class="h-7 w-7 rounded-full bg-white"
+                class="round-image"
                 th:src="${#strings.defaultString(user?.profilePictureUrl, '/images/default-profile-photo.png')}"
                 alt="Profile Picture"
               />
@@ -40,35 +40,33 @@
       </nav>
     </header>
 
-    <main class="overflow-auto w-full bg-slate-200">
+    <main class="overflow-y-auto scrollbar-hidden">
       <div th:if="${collections.size == 0}">
-        <div
-          class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm"
-        >
+        <div class="container">
           <span class="text-sm font-semibold">No collections yet</span>
         </div>
       </div>
 
       <div th:if="${collections != null}">
-        <div class="flex flex-col items-center justify-center w-full bg-white">
+        <div class="container">
           <!-- COLLECTION CONTAINER -->
           <div
             th:each="collection : ${collections}"
             th:id="'collection-' + ${collection.id}"
-            class="collectionContainer"
+            class="box"
           >
             <!-- COLLECTION NAVBAR -->
-            <div class="collectionContainerNavbar collectionNavbar shadow-sm">
-              <div class="flex justify-between items-center w-full">
+            <nav>
+              <div class="flex justify-between items-center w-full pr-2">
                 <div>
-                  <ul class="flex justify-start items-center w-full">
+                  <ul>
                     <li class="pr-2">
                       <a
                         th:if="${collection?.user?.id != null}"
                         th:href="@{/profile/{id}(id=${collection.user.id})}"
                       >
                         <img
-                          class="h-7 w-7 rounded-full bg-white"
+                          class="round-image"
                           th:src="${users != null && collection?.user?.id != null && users[collection.user.id]?.profilePictureUrl != null ? users[collection.user.id].profilePictureUrl : '/images/default-profile-photo.png'}"
                           th:alt="${users != null && collection?.user?.id != null ? users[collection.user.id]?.username : 'Default Username'}"
                         />
@@ -92,9 +90,9 @@
                   ></h2>
                 </div>
               </div>
-            </div>
+            </nav>
 
-            <div class="image-container relative bg-white">
+            <div class="square-index">
               <!-- COLLECTION IMAGE -->
               <a
                 class="collectionImage"
@@ -103,7 +101,6 @@
                 <img
                   th:src="${#strings.defaultString(collection?.imageUrl, '/images/default-collection-image.png')}"
                   alt="Collection Cover"
-                  class="w-full object-cover aspect-square"
                 />
               </a>
 
@@ -147,95 +144,95 @@
             </div>
 
             <!-- COLLECTION CAPTION -->
-            <div
-              class="collectionCaption w-full px-2 shadow-sm border-2 border-slate-100"
-            >
-              <div class="flex flex-row justify-between items-center">
-                <div class="flex flex-row w-full h-auto py-1 text-sm">
-                  <ul class="flex flex-row justify-start items-center pr-2">
-                    <li class="flex flex-row justify-start items-center pr-2">
-                      <div class="flex justify-start items-center">
-                        <form
-                          th:action="@{/collections/{collectionId}/like-from-index (collectionId=${collection?.id})}"
-                          method="post"
+            <div class="caption-container">
+              <div class="like-comment-container">
+                <ul>
+                  <li>
+                    <div class="element">
+                      <form
+                        th:action="@{/collections/{collectionId}/like-from-index (collectionId=${collection?.id})}"
+                        method="post"
+                      >
+                        <input
+                          type="hidden"
+                          name="collectionId"
+                          th:value="${collection?.id}"
+                        />
+                        <input
+                          type="hidden"
+                          name="userId"
+                          th:value="${user?.id}"
+                        />
+                        <input
+                          type="hidden"
+                          name="liked"
+                          th:value="${collection?.isLiked ?: false}"
+                        />
+
+                        <button
+                          type="submit"
+                          class="likeButton"
+                          th:if="${collection?.user?.id != user?.id}"
                         >
-                          <input
-                            type="hidden"
-                            name="collectionId"
-                            th:value="${collection?.id}"
-                          />
-                          <input
-                            type="hidden"
-                            name="userId"
-                            th:value="${user?.id}"
-                          />
-                          <input
-                            type="hidden"
-                            name="liked"
-                            th:value="${collection?.isLiked ?: false}"
-                          />
-
-                          <button
-                            type="submit"
-                            class="likeButton"
-                            th:if="${collection?.user?.id != user?.id}"
+                          <span
+                            class="pr-2 font-medium"
+                            th:if="${collection?.isLiked ?: false}"
                           >
-                            <span
-                              class="pr-2 font-medium"
-                              th:if="${collection?.isLiked ?: false}"
-                            >
-                              &#9829;
-                            </span>
-                            <span
-                              class="pr-2 font-medium"
-                              th:if="${collection?.isLiked == null || !collection.isLiked}"
-                            >
-                              &#9825;
-                            </span>
-                          </button>
-                          <button
-                            type="button"
-                            class="likeButton"
-                            th:if="${collection?.user?.id == user?.id}"
-                            disabled
+                            &#9829;
+                          </span>
+                          <span
+                            class="pr-2 font-medium"
+                            th:if="${collection?.isLiked == null || !collection.isLiked}"
                           >
-                            <span
-                              class="pr-2 font-medium"
-                              th:text="${collection?.likeCount ?: 0}"
-                            >
-                              &#9829;
-                            </span>
-                          </button>
-                        </form>
-                      </div>
-                      <!-- LIKE COUNT -->
-                      <div class="flex justify-start items-center">
-                        <p
-                          class="font-thin"
-                          th:text="${collection.likeCount ?: 0}"
-                        ></p>
-                      </div>
-                    </li>
+                            &#9825;
+                          </span>
+                        </button>
+                        <button
+                          type="button"
+                          class="likeButton"
+                          th:if="${collection?.user?.id == user?.id}"
+                          disabled
+                        >
+                          <span
+                            class="pr-2 font-medium"
+                            th:text="${collection?.likeCount ?: 0}"
+                          >
+                            &#9829;
+                          </span>
+                        </button>
+                      </form>
+                    </div>
+                    <!-- LIKE COUNT -->
+                    <div class="element">
+                      <p
+                        class="font-thin"
+                        th:text="${collection.likeCount ?: 0}"
+                      ></p>
+                    </div>
+                  </li>
 
-                    <li class="flex flex-row justify-start items-center pr-2">
+                  <li>
+                    <div class="element">
                       <a
                         th:href="@{/collection/{id}/comments(id=${collection.id})}"
                         class="collectionCommentButton pr-2 font-medium"
                       >
                         comment
                       </a>
-                      <span
+                    </div>
+                    <div cleass="element">
+                      <p
                         class="font-thin"
                         th:text="${collection.commentCount ?: 0}"
-                      ></span>
-                    </li>
-                  </ul>
-                </div>
+                      ></p>
+                    </div>
+                  </li>
+                </ul>
               </div>
 
               <div>
                 <div
-                  class="w-full h-auto flex justify-start items-center text-sm"
+                  class="caption"
                 >
                   <!-- CAPTION -->
                   <p
@@ -245,7 +242,7 @@
                   >
                     <a th:href="@{/profile/{id}(id=${collection.user.id})}">
                       <span
-                        class="font-semibold"
+                        class="font-semibold pr-1"
                         th:if="${users[collection.user.id]?.username != null}"
                         th:text="${users[collection.user.id]?.username}"
                       ></span>
@@ -257,18 +254,14 @@
                   </p>
                 </div>
 
-                <div class="w-full flex justify-between items-center py-1">
-                  <!-- MONTH YEAR -->
-                  <div
-                    class="w-full flex flex-col justify-center items-start pt-1"
-                  >
-                    <span
-                      style="font-size: 9px"
-                      class="font-extralight"
-                      th:if="${collection?.updatedAt != null}"
-                      th:text="${#dates.format(collection?.updatedAt, 'MMMM-YYYY')}"
-                    ></span>
-                  </div>
+                <!-- MONTH YEAR -->
+                <div class="small-date">
+                  <span
+                    style="font-size: 9px"
+                    class="font-extralight"
+                    th:if="${collection?.updatedAt != null}"
+                    th:text="${#dates.format(collection?.updatedAt, 'MMMM-YYYY')}"
+                  ></span>
                 </div>
               </div>
             </div>
@@ -278,37 +271,37 @@
       </div>
     </main>
     <footer>
-      <div id="footerNavContent" class="footerNav">
-        <ul class="flex justify-between items-center w-full">
+      <nav>
+        <ul>
           <li>
             <div
               id="homeButton"
-              class="h-4 w-4 flex items-center justify-center"
+              class="icon"
             >
               <a class="text-2xl font-bold" href="/index">&#8962;</a>
             </div>
           </li>
           <li>
-            <div class="h-4 w-4 flex items-center justify-center">
+            <div class="icon">
               <a class="text-2xl font-bold" href="/popular">&#10066;</a>
             </div>
           </li>
           <li>
-            <div class="h-4 w-4 flex items-center justify-center">
+            <div class="icon">
               <a class="text-2xl font-bold" href="/create-collection">&#43;</a>
             </div>
           </li>
           <li>
             <a href="/profile">
               <img
-                class="h-7 w-7 rounded-full bg-white"
+                class="round-image"
                 th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
                 alt="Profile Picture"
               />
             </a>
           </li>
         </ul>
-      </div>
+      </nav>
     </footer>
   </body>
 </html>
