--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -765,13 +765,12 @@ main {
   background-color: #f8fafc;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   height: auto;
   top: 3rem;
   bottom: 3rem;
   width: 100%;
-  max-width: 50%;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -813,7 +812,7 @@ header nav {
   align-items: center;
   height: 3rem;
   width: 100%;
-  max-width: 50%;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
   background-color: rgba(255, 255, 255, 0.05);
@@ -846,7 +845,7 @@ footer nav {
   align-items: center;
   height: 3rem;
   width: 100%;
-  max-width: 50%;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
   background-color: rgba(255, 255, 255, 0.15);
@@ -872,6 +871,16 @@ img {
 
 a {
   cursor: default;
+}
+
+input {
+  border: 1px solid #d1d5db !important;
+  border-radius: 0.375rem !important;
+  width: 100% !important;
+  padding: 0.5rem !important;
+  box-sizing: border-box !important;
+  background-color: #fff !important;
+  color: #111827 !important;
 }
 
 .container {
@@ -1072,6 +1081,10 @@ a {
   left: 0.5rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .right-2 {
   right: 0.5rem;
 }
@@ -1110,10 +1123,6 @@ a {
   margin-bottom: 0.25rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -1124,6 +1133,10 @@ a {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -1593,6 +1606,12 @@ a {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1665,6 +1684,23 @@ a {
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, and Edge */
+}
+
+#search-results {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-height: 16rem;
+  overflow-y: auto;
+  background: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  width: 100%;
+}
+
+.search-container {
+  position: relative;
 }
 
 .invalid\:border-red-500:invalid {
